# kube-lab

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: config.py  k8s_client.py  routes.py
deploy/: Chart.yaml  values.yaml
deploy/kube-lab/: values.yaml
deploy/kube-lab/templates/: _helpers.tpl  ingress.yaml
deploy/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  svc.yaml
src/api/: __init__.py  config.py  k8s_client.py  routes.py
tests/: test_k8s_client.py  test_routes.py
