[tool.poetry]
name = "cluster-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^30.1.0"
flasgger = "^0.9.7"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
